<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SFOS</string>


    <string name="FACEBOOK_APP_ID">366492264242066</string>
    <string name="ACCOUNT_KIT_CLIENT_TOKEN">30bb412f4854fcf2f39e0c4f7211d38f</string>
    <string name="title_activity_home">SFOS</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_fav">Favorites</string>

    <string name="update_information">Update Information</string>
    <string name="sign_out">Sign Out</string>
    <string name="nearby_restaurant">Nearby Restaurant</string>
    <string name="order_history">Order History</string>
    <string name="update_info">Update Information</string>
    <string name="money_sign">Rs</string>
    <string name="our_specialized">Our Specialized</string>
    <string name="view_cart">VIEW CART</string>
    <string name="size">SIZE</string>
    <string name="add_on">ADD ON</string>
    <string name="description">Description</string>
    <string name="search">Search</string>
    <string name="place_order">Place Order</string>
    <string name="cart">Cart</string>
    <string name="empty_cart">Empty Cart</string>
    <string name="your_order">Your Order</string>


</resources>
