<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group>
        <item
            android:id="@+id/nav_nearby"
            android:icon="@drawable/ic_restaurant_grey_24dp"
            android:title="@string/nearby_restaurant" />

    </group>

    <group>
        <item
            android:id="@+id/nav_fav"
            android:icon="@drawable/ic_favorite_grey_24dp"
            android:title="@string/menu_fav" />

    </group>


    <group>
        <item
            android:id="@+id/nav_order_history"
            android:icon="@drawable/ic_history_grey_24dp"
            android:title="@string/order_history" />

    </group>

    <group>
        <item
            android:id="@+id/nav_update_info"
            android:icon="@drawable/ic_account_circle_grey_24dp"
            android:title="@string/update_info" />

    </group>

    <group>
        <item
            android:id="@+id/nav_log_out"
            android:icon="@drawable/ic_exit_to_app_grey_24dp"
            android:title="@string/sign_out" />

    </group>


    <!--<item-->
            <!--android:id="@+id/nav_gallery"-->
            <!--android:icon="@drawable/ic_menu_gallery"-->
            <!--android:title="@string/menu_gallery" />-->
        <!--<item-->
            <!--android:id="@+id/nav_slideshow"-->
            <!--android:icon="@drawable/ic_menu_slideshow"-->
            <!--android:title="@string/menu_slideshow" />-->
        <!--<item-->
            <!--android:id="@+id/nav_tools"-->
            <!--android:icon="@drawable/ic_menu_manage"-->
            <!--android:title="@string/menu_tools" />-->
    <!--</group>-->

    <!--<item android:title="Communicate">-->
        <!--<menu>-->
            <!--<item-->
                <!--android:id="@+id/nav_share"-->
                <!--android:icon="@drawable/ic_menu_share"-->
                <!--android:title="@string/menu_share" />-->
            <!--<item-->
                <!--android:id="@+id/nav_send"-->
                <!--android:icon="@drawable/ic_menu_send"-->
                <!--android:title="@string/menu_send" />-->
        <!--</menu>-->
    <!--</item>-->
</menu>
