<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".HomeActivity"
    android:background="@color/divider"
    android:orientation="vertical"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/AppTheme.PopupOverlay">

                <androidx.appcompat.widget.Toolbar
                    android:id="@id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="@color/button_color"
                    app:titleTextColor="@android:color/white"
                    app:popupTheme="@style/AppTheme.PopupOverlay"/>



            </com.google.android.material.appbar.AppBarLayout>

            <ImageView
                android:id="@+id/img_food_detail"
                android:scaleType="centerCrop"
                android:layout_width="match_parent"
                android:layout_height="150dp"/>

            <androidx.cardview.widget.CardView
                android:layout_margin="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="vertical"
                    android:padding="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_weight="10"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:src="@drawable/ic_attach_money_black_24dp"
                            android:layout_gravity="center_vertical"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                        <TextView
                            android:id="@+id/txt_money"
                            android:text="200.0"
                            android:textSize="18sp"
                            android:layout_weight="8"
                            android:layout_gravity="center_vertical"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            />

                        <com.google.android.material.floatingactionbutton.FloatingActionButton

                            android:id="@+id/fab_add_to_cart"
                            android:src="@drawable/ic_shopping_cart_white_24dp"
                            android:layout_gravity="center_vertical|right"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                    </LinearLayout>

                    <view
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:background="@android:color/darker_gray"
                        android:layout_width="match_parent"
                        android:layout_height="1dip"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:text="@string/size"
                            android:textSize="22sp"
                            android:fontFamily="@font/magnifika"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                        <RadioGroup
                            android:id="@+id/rd1_group_size"
                            android:orientation="horizontal"
                            android:weightSum="3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                        </RadioGroup>


                    </LinearLayout>

                    <view
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:background="@android:color/darker_gray"
                        android:layout_width="match_parent"
                        android:layout_height="1dip"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        >

                        <com.github.florent37.expansionpanel.ExpansionHeader
                            android:layout_height="wrap_content"
                            android:layout_width="match_parent"
                            app:expansion_headerIndicator="@id/headerIndicator"
                            app:expansion_layout="@id/expansionLayout"
                            app:expansion_toggleOnClick="true">



                            <TextView

                                android:text="@string/add_on"
                                android:textSize="22sp"
                                android:fontFamily="@font/magnifika"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>

                            <ImageView
                                android:adjustViewBounds="true"
                                android:id="@+id/headerIndicator"
                                android:layout_gravity="center_vertical|right"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="16dp"
                                android:layout_width="wrap_content"
                                app:srcCompat="@drawable/ic_expansion_header_indicator_grey_24dp"/>




                        </com.github.florent37.expansionpanel.ExpansionHeader>

                        <com.github.florent37.expansionpanel.ExpansionLayout
                            android:id="@+id/expansionLayout"
                            android:layout_height="wrap_content"
                            android:layout_width="match_parent">

                            <androidx.recyclerview.widget.RecyclerView
                                android:id="@+id/recycler_addon"
                                android:layout_width="match_parent"
                                android:layout_height="300dp">

                            </androidx.recyclerview.widget.RecyclerView>

                        </com.github.florent37.expansionpanel.ExpansionLayout>





                    </LinearLayout>

                    <view
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:background="@android:color/darker_gray"
                        android:layout_width="match_parent"
                        android:layout_height="1dip"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:text="@string/description"
                            android:textStyle="bold"
                            android:fontFamily="@font/magnifika"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                        <TextView
                            android:id="@+id/txt_description"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Description"/>

                    </LinearLayout>



                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <Button
            android:id="@+id/btn_view_cart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/border_button"
            android:fontFamily="@font/magnifika"
            android:text="@string/view_cart"
            android:layout_alignParentBottom="true"
            android:textColor="@android:color/white"/>




    </RelativeLayout>

</RelativeLayout>